# az_storage_sharedkey

./: .gitignore  Cargo.toml  LICENSE  README.md  start-azurite.sh
src/: body.rs  date.rs  lib.rs  main.rs  method.rs  storage_request.rs  test.rs
src/auth_header/: auth_header.rs  hmac_sha256.rs  mod.rs
tests/: azurite-test.rs  azurite_exec_test.rs  azurite_test.rs
