[package]
name = "az_storage_sharedkey"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.44"
hmac = "0.12.1"
sha2 = "0.10.9"
urlencoding = "2.1.3"
reqwest = { version = "0.13.2", features = ["blocking","query"] }
bytes = "1.11.1"

[dev-dependencies]
# feature query is needed to build/serialize the query-parameters in tests
reqwest = { version = "0.13.2", features = ["blocking","query"] }
regex = "1.12.3"
